--- a/html/0-1_main.html
+++ b/html/0-1_main.html
@@ -83,6 +83,7 @@
                     <img class="mobile-main" src="/img/img_main_bn-03-mobile.png" srcset="/img/img_main_bn-03-mobile@2x.png 2x, /img/img_main_bn-03-mobile@2x.png 3x" alt="시작부터 마지막까지 모든 과정을 청년과 함께!">
                 </div>
             </div>
+            <div id="swiper-pagination" class="swiper-pagination"></div>
         </div>
     </section>
 
@@ -243,7 +244,8 @@
             
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/js/main.js"></script>
 
