--- a/html/0-0_component.html
+++ b/html/0-0_component.html
@@ -24,7 +24,6 @@
             <div class="row">
                 <a href="#">로그인</a>
                 <a href="#">회원가입</a>
-                <a href="#">ENGLISH</a>
             </div>
         </div>
         <div class="header__bottom">
@@ -96,6 +95,10 @@
 
     <section id="contents">
         <div class="row">
+            <div class="top-nab-btn btn-wrap">
+                <a href="#" class="btn-bl btn-round">공동인증서 사용 안내</a>
+                <a href="#" class="btn-close btn-round">간편인증 사용 안내</a>
+            </div>
             <h2 class="contents-title">제목</h2>
             
             <div class="container">
