--- a/html/2-3_인증방법안내-공동 copy.html
+++ b/html/2-3_인증방법안내-공동 copy.html
@@ -25,7 +25,6 @@
             <div class="row">
                 <a href="#">로그인</a>
                 <a href="#">회원가입</a>
-                <a href="#">ENGLISH</a>
             </div>
         </div>
         <div class="header__bottom">
@@ -70,7 +69,7 @@
     </header>
     <section id="title-banner">
         <div class="title-banner">
-            <h1>청년인재데이터베이스 소개</h1>
+            <h1>인증방법 안내</h1>
             <img src="/img/img_main_bn.png" alt="배너이미지">
         </div>
         <div class="row">
@@ -97,61 +96,41 @@
 
     <section id="contents">
         <div class="row">
-            <h2 class="contents-title">청년인재데이터베이스란?</h2>
+            <div class="top-nab-btn btn-wrap">
+                <a href="#" class="btn-bl btn-round">공동인증서 사용 안내</a>
+                <a href="#" class="btn-close btn-round">간편인증 사용 안내</a>
+            </div>
+            <h2 class="contents-title">공동인증서 소개</h2>
             
             <div class="container">
-                <p class="container__title">청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.
-                    <span class="sub-block">청년인재데이터베이스는 공무원 및 사회 각 분야 전문가 인물 정보를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.</span>
-                </p>
+                <p class="container__title">공동인증서(구 공인인증서)란?</p>
+                <ul class="container__list">
+                    <li>국가 공동인증기관으로부터 신원확인을 위해 발급 받은 온라인 거래를 위한 신분증을 의미합니다.</li>
+                    <li>공동인증서에는 가입자 이름, 가입자의 전자서명 검증정보, 전자서명 방식, 공동인증서 일련번호, 공동인증서의 유효기간, 발급기관명 등이 포함되어 있습니다.</li>
+                    <li>인감도장을 사용하는 것과 같은 의미의 전자서명을 이용하여, 인터넷을 통한 거래시 안전하게 고객의 신원을 증명하고 확인하는 서비스입니다.</li>
+                </ul>
                 <div class="bottom-line"></div>
-                <p class="container__title">추천직위</p>
+                <p class="container__title">공동인증서의 활용</p>
+                <ul class="container__list">
+                    <li>인터넷에서 전자문서에 공동인증서를 사용하면, 신원확인, 문서의 위변조 방지, 거래사실의 부인 방지 등의 효과를 얻을 수 있습니다.</li>
+                    <li>청년인재데이터베이스에서는 본인인증의 한 방법으로 공동인증서를 사용할 수 있습니다.</li>
+                </ul>
+                <div class="bottom-line"></div>
+                <p class="container__title mb56">공동인증기관(Certificate Authority : CA)
+                    <span class="sub-block">국가인재데이터베이스는 공무원 및 사회 각 분야 전문가 인물 정보를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.</span>
+                </p>
                 <div class="position">
-                    <div class="position__list position3">
-                        <p>정무직(선거직 제외)</p>
-                        <p>개방형 및 공모직위</p>
-                        <p>책임운영기관장</p>
-                        <p>공공기관장 및 임원</p>
-                        <p>정부위원회 위원</p>
-                        <p>각급기관 시험위원</p>
-                        <p>각종 선발심사위원회 및 후보추천위원회 위원</p>
+                    <div class="position__list position2">
+                        <p>금융결제원 : www.yessign.com</p>
+                        <p>한국전자인증 : www.crosscert.com</p>
+                        <p>한국정보화진흥원 : www.nia.or.kr</p>
+                        <p>코스콤 : www.signkorea.com</p>
+                        <p>한국정보인증 : www.signgate.com</p>
+                        <p>KTNET : www.tradesign.net</p>
                     </div>
-                    <img class="position-img1" src="/img/position-img.png" alt="추천직위">
+                    <img class="position-img2" src="/img/position-img2.png" alt="추천직위">
                 </div>
-                <div class="bottom-line"></div>
-                <p class="container__title">청년인재데이터베이스는 자격, 능력, 실적 등 객관적 정보가 수록됩니다.
-                    <span class="sub-block">청년인재데이터베이스는 학력, 경력, 자격면허, 상훈, 저서, 논문 등 주요 직위 인재추천에 필요한 객관적인 인물정보 자료가 수록되어 있습니다.</span>
-                </p>
-                <div class="bottom-line"></div>
-                <p class="container__title">청년인재데이터베이스는 자격, 능력, 실적 등 객관적 정보가 수록됩니다.</p>
-                <ul class="container__list">
-                    <li>『공공기관의 운영에 관한 법률』의 적용을 받는 공공기관의 기관장 및 임원</li>
-                    <li>『행정기관 소속 위원회의 설치·운영에 관한 법률』에 따른 위원회 위원</li>
-                    <li>5급 이상 국가공무원, 4급 이상 지방공무원(여성은 5급 이상)</li>
-                    <li>대학의 조교수 이상, 인문사회·과학기술 등 각 분야 연구기관의 연구원, 박사 학위 소지자</li>
-                    <li>중견기업의 임원, 유망 중소기업(『벤처기업 육성에 관한 특별조치법』 제2조에 따른 벤처기업 등)의 경영인</li>
-                    <li>주요 협회, 단체 등의 임원급 이상에 해당하는 자</li>
-                    <li>변호사·의사·건축사·공인회계사·공인노무사 등 전문 자격증 소지자</li>
-                    <li>기술사, 대한민국 명장</li>
-                    <li>문화·예술·체육 관련 국내외 입상자 및 훈포상 수여자</li>
-                    <li>긴급구조요원, 시민단체 활동가, 국제기구 종사자 등 해당 분야에서 10년 이상의 경험을 보유한 자</li>
-                    <li>사회 각 분야에서 뚜렷한 업적이나 성과를 거두어 국가의 위상제고에 기여한 자</li>
-                    <li>기타 데이터베이스에 수록될 필요가 있다고 인정하는 자</li>
-                </ul>
             </div>
-
-            <h3 class="contents-title">청년인재데이터베이스를 통한 인재추천 및 관리</h3>
-            <div class="container">
-                <p class="container__title">청년인재데이터베이스를 활용한 인재추천</p>
-                <ul class="container__list">
-                    <li>부처에 인사수요가 발생한 경우, 청년인재 DB를 활용하여 적합한 인재를 추천합니다.
-                        <span>– 해당 분야의 전문가 Pool에서 경력, 저서/논문, 자격 등을 고려하여 적합한 인재를 추천합니다.</span>
-                    </li>
-                    <li>현재 위원활동 유무, 나이, 성별, 근무지역 등을 고려하여 많은 인재를 다양한 위원활동에 추천하고 있습니다.
-                        <span>– 특히, 여성과 지방인재들의 추천 및 참여 유도에 많은 노력을 기울이고 있습니다.</span>
-                    </li>
-                </ul>
-            </div>
-
         </div>
     </section>
     <footer>
