--- a/html/2-4_인증방법안내-간편.html
+++ b/html/2-4_인증방법안내-간편.html
@@ -33,7 +33,7 @@
                     <img src="/img/img_logo.png" alt="청년인재데이터베이스">
                 </a>
                 <ul class="header__menu">
-                    <li class="sub-menu-ok header__step1  temp-menu1" data-menuval="1"><a href="#">청년인재데이터베이스</a>   
+                    <li class="sub-menu-ok header__step1  temp-menu1 menu-on" data-menuval="1"><a href="#">청년인재데이터베이스</a>   
                         <ul>
                             <li class="header__step2 "><a href="#" >청년인재데이터베이스</a></li>
                             <li class="header__step2 "><a href="#" >등록방법 안내</a></li>
@@ -69,7 +69,7 @@
     </header>
     <section id="title-banner">
         <div class="title-banner">
-            <h1>등록방법 안내</h1>
+            <h1>인증방법 안내</h1>
             <img src="/img/img_main_bn.png" alt="배너이미지">
         </div>
         <div class="row">
@@ -95,27 +95,42 @@
     </section>
 
     <section id="contents">
-        <div class="row grid">
-            <h2 class="contents-title item col-12">신청서 및 매뉴얼 다운로드</h2>
-                <div class="container item col-6 m960-col-12 down-wrap">
-                    <img src="/img/down-img1.png" alt="청년인재DB 등록신청서 이미지">
-                    <div>
-                        <p class="down-wrap-title">청년인재DB 등록신청서</p>
-                        <p class="down-wrap-info">청년인재데이터베이스 등록을 위한<br>
-                            신청서입니다.</p>
-                        <a href="#" download class="more-btn more-btn-bl">신청서 다운로드</a>
-                    </div>
-                </div>
-                <div class="container item col-6 m960-col-12 down-wrap">
-                    <img src="/img/down-img2.png" alt="청년인재DB 사용자 매뉴얼 이미지">
-                    <div>
-                        <p class="down-wrap-title">청년인재DB 사용자 매뉴얼</p>
-                        <p class="down-wrap-info">청년인재데이터베이스 인물정보 등록을 위한 <br>
-                            민간사용자 매뉴얼 입니다.</p>
-                        <a href="#" download class="more-btn more-btn-bl">매뉴얼 다운로드</a>
-                    </div>
-                </div>
+        <div class="row">
+            <div class="top-nab-btn btn-wrap">
+                <a href="#" class="btn-close btn-round">공동인증서 사용 안내</a>
+                <a href="#" class="btn-bl btn-round">간편인증 사용 안내</a>
+            </div>
+            <h2 class="contents-title">간편인증 소개</h2>
             
+            <div class="container">
+                <p class="container__title">간편인증(민간인증서)이란?</p>
+                <ul class="container__list">
+                    <li>간편인증은 PIN번호/지문 만으로 로그인과 거래를 할 수 있는 서비스입니다. </li>
+                    <li>간편인증 사업자별 핸드폰 앱을 이용하여 간편인증 서비스를 이용할 수 있으며, 인증서 등록절차 없이 간편하게 로그인할 수 있습니다. </li>
+                    <li>간편인증 서비스를 이용하기 위해서는 간편인증 사업자별로 제공하는 인증서 발급절차에 따라 먼저 인증서를 발급 받아야 합니다.</li>
+                </ul>
+                <div class="bottom-line"></div>
+                <p class="container__title">간편인증의 활용</p>
+                <ul class="container__list">
+                    <li>인터넷에서 전자문서에 공동인증서를 사용하면, 신원확인, 문서의 위변조 방지, 거래사실의 부인 방지 등의 효과를 얻을 수 있습니다.</li>
+                    <li>청년인재데이터베이스에서는 본인인증의 한 방법으로 간편인증을 사용할 수 있습니다.</li>
+                </ul>
+                <div class="bottom-line"></div>
+                <p class="container__title mb56">간편인증 종류
+                    <span class="sub-block">간편인증 사업자별 핸드폰 앱을 이용하여 면허민원 서비스를 이용할 수 있습니다.</span>
+                </p>
+                <div class="position">
+                    <div class="position__list position2">
+                        <p>카카오 인증서</p>
+                        <p>페이코 인증서</p>
+                        <p>통신사 PASS 인증서</p>
+                        <p>KB모바일 인증서</p>
+                        <p>삼성패스 인증서</p>
+                        <p>네이버 인증서</p>
+                    </div>
+                    <img class="position-img2" src="/img/position-img2.png" alt="추천직위">
+                </div>
+            </div>
         </div>
     </section>
     <footer>
