--- a/html/0-0_component.html
+++ b/html/0-0_component.html
@@ -124,6 +124,12 @@
                         <option value="선택2">선택2</option>
                         <option value="선택3">선택3</option>
                     </select>
+                    <select name="sel" id="sel" class="select-nomal w200">
+                        <option value="기본선택">기본선택</option>
+                        <option value="선택1">선택1</option>
+                        <option value="선택2">선택2</option>
+                        <option value="선택3">선택3</option>
+                    </select>
                     <p>체크박스</p>
                     <input type="checkbox" id="ch1"><label for="ch1" class="check-nomal">체크박스</label>
                     <input type="checkbox" id="ch2"><label for="ch2" class="check-nomal">체크박스</label>
