익스플로러 대응1

--- a/html/3-4_인재정보등록-완료.html
+++ b/html/3-4_인재정보등록-완료.html
@@ -90,27 +90,15 @@
 
     <section id="contents">
         <div class="row">
-            <h2 class="contents-title">청년인재정보 등록 신청</h2>
-            
-            <div class="container mb40">
-                <p class="container__title">서약내용</p>
-                <div class="box-blue">
-                    <p>본인은 ｢청년기본법 시행령｣ 제20조의3에 따라 청년인재정보를 제공하며, 직접 기재한 내용을 확인하였습니다. 만약 사실이 아닐 경우 이에 대한 책임이 있음을 서약합니다.</p>
+            <div class="container register">
+                <img src="/img/register.png" alt="청년인재정보 등록신청 완료축하 이미지">
+                <div>
+                    <p class="register__title"><strong>청년인재정보 등록 신청</strong>이<br>
+                        완료되었습니다.</p>
+                    <p class="register__info">회원님의 청년인재정보 등록 신청은 청년인재데이터베이스 담당자 검토 후<br>
+                        담당자의 승인을 받아야 등록 완료 처리가 됩니다.</p>
+                    <a href="#" download class="more-btn more-btn-bl">홈으로 이동</a>
                 </div>
-                <div class="checkbox-wrap">
-                    <input type="checkbox" id="ch1">
-                    <label for="ch1" class="check-small"></label>
-                    <label for="ch1" class="agree">서약 내용을 확인하였으며, 이에 동의합니다.</label>
-                </div>
-                <div class="bottom-line"></div>
-                <p class="container__title">유의사항</p>
-                <div class="box-wh">
-                    <p>귀하의 정보는 「청년기본법」 제15조의2에 따라 정책결정과정에 청년의 참여를 지원하기 위한 목적으로만 활용되며 그 외 다른 목적으로는 활용되지 않습니다. 귀하께서 제공해 주신 개인정보는 「개인정보보호법」, 「청년기본법 시행령」 등 관계 법령에 따라 보호되며 원하시는 경우 언제든지 폐기를 요구할 수 있습니다. 또한, 제공한 정보를 검토하여 불충분하다고 인정되는 등의 경우 청년인재데이터베이스에 등록되지 않을 수 있음을 알려드립니다.</p>
-                </div>
-            </div>
-            <div class="btn-wrap">
-                <button class="btn-wh btn-round">이전</button>
-                <button class="btn-bl btn-round">등록완료</button>
             </div>
         </div>
     </section>
