--- a/html/3-1_인재정보등록-신청.html
+++ b/html/3-1_인재정보등록-신청.html
@@ -280,11 +280,9 @@
                             </div>
                         </div>
                         <div class="btn-wrap">
-                            <button class="add-btn">학력 추가</button>
+                            <button class="add-btn">경력 추가</button>
                         </div>
-                    </div>  
-                    <div class="bottom-line"></div> 
-                    <div class="container">
+                        <div class="bottom-line"></div> 
                         <p class="container__title">직종 구분(전∙현직)<span class="sub-inline">최대 3개 까지 선택할 수 있습니다.</span></p> 
                         <div class="box-wrap wrap-02">
                             <input type="checkbox" id="job1">
@@ -342,11 +340,11 @@
                                         <input type="text" class="input-nomal w300" placeholder="직위">
                                     </div>
                                 </div>
-                                <div class="b-item">
+                                <div class="b-item b-item-06">
                                     <label for="">근무기간</label>
-                                    <input type="text" class="date-nomal w300 hasDatepicker" placeholder="시작연월" id="dp1663239751224">
+                                    <input type="text" class="date-nomal w300 " placeholder="시작연월" id="dp1663239751224">
                                     <span>~</span>
-                                    <input type="text" class="date-nomal w300 hasDatepicker" placeholder="종료연월" id="dp1663239751224">
+                                    <input type="text" class="date-nomal w300 " placeholder="종료연월" id="dp1663239751224">
                                 </div>
                                 <div class="b-item">
                                     <label for="">학교명</label>
@@ -357,7 +355,122 @@
                                     <input type="text" class="input-nomal w100p" placeholder="주요업무를 작성해 주세요">
                                 </div>
                             </div>
+                            <div class="btn-wrap">
+                                <button class="add-btn">학력 추가</button>
+                            </div>
                         </div>
+                    </div>  
+                    <div class="container">
+                        <p class="container__title">주요 활동사항<span class="sub-inline">중복선택 할 수 있습니다.</span></p> 
+                        <div class="box-wrap wrap-02">
+                            <input type="checkbox" id="active1">
+                            <label for="active1" class="check-nomal">고용ㆍ노동 분야</label>
+                            <input type="checkbox" id="active2">
+                            <label for="active2" class="check-nomal">창업 분야</label>
+                            <input type="checkbox" id="active3">
+                            <label for="active3" class="check-nomal">주거ㆍ교통 분야</label>
+                            <input type="checkbox" id="active4">
+                            <label for="active4" class="check-nomal">교육 분야</label>
+                            <input type="checkbox" id="active5">
+                            <label for="active5" class="check-nomal">보건ㆍ복지ㆍ가족 분야</label>
+                            <input type="checkbox" id="active6">
+                            <label for="active5" class="check-nomal">금융 분야</label>
+                            <input type="checkbox" id="active6">
+                            <input type="checkbox" id="active1">
+                            <label for="active1" class="check-nomal">문화ㆍ체육ㆍ관광 분야</label>
+                            <input type="checkbox" id="active2">
+                            <label for="active2" class="check-nomal">인권 분야</label>
+                            <input type="checkbox" id="active3">
+                            <label for="active3" class="check-nomal">지역발전 분야</label>
+                            <input type="checkbox" id="active4">
+                            <label for="active4" class="check-nomal">기후ㆍ환경 분야</label>
+                            <input type="checkbox" id="active5">
+                            <label for="active5" class="check-nomal">통일ㆍ안보ㆍ치안 분야</label>
+                            <input type="checkbox" id="active6">
+                            <label for="active5" class="check-nomal">기타 분야</label>
+                        </div>
+                        <div class="bottom-line"></div>
+                        <div class="box-style wrap-05 wrap-06">
+                            <div>
+                                <div class="b-item">
+                                    <label for="">상세분야</label>
+                                    <input type="text" class="input-nomal w300 mr10" placeholder="상세 분야를 입력해 주세요">
+                                </div>
+                                <div class="b-item b-item-06 b-item-07">
+                                    <label for="">활동기간</label>
+                                    <input type="text" class="date-nomal w200 " placeholder="날짜선택" id="dp1663239751224">
+                                    <span>~</span>
+                                    <input type="text" class="date-nomal w200 " placeholder="날짜선택" id="dp1663239751224">
+                                </div>
+                            </div>
+                            <div class="b-item">
+                                <label for="">주요내용</label>
+                                <input type="text" class="input-nomal w100p" placeholder="주요 내용을 작성해 주세요">
+                            </div>
+                            <div class="b-item flex-divide align-items-start">
+                               <div class="b-item">
+                                    <label for="">비고</label>
+                                    <input type="text" class="input-nomal w300" placeholder="비고">
+                               </div>
+                                <p>※ 봉사활동, 정책기자단, SNS활동, 동아리, 프로젝트 등 다양한 활동을 기재하시기 바랍니다.</p>
+                            </div>
+                        </div>
+                        <div class="btn-wrap">
+                            <button class="add-btn">활동 추가</button>
+                        </div>
+                    </div>  
+                    <div class="container">
+                        <p class="container__title">주요 성과물<span class="sub-inline">특허 ∙ 면허 ∙ 자격증 ∙ 수상 ∙ 논문 ∙ 저서 ∙ 기고 등</span></p> 
+                        <div class="box-style wrap-05 wrap-06">
+                            <div>
+                                <div class="b-item">
+                                    <label for="">제목</label>
+                                    <input type="text" class="input-nomal w600" placeholder="명칭">
+                                </div>
+                                <div class="b-item b-item-06 b-item-07">
+                                    <label for="">구분</label>
+                                    <input type="text" class="input-nomal w200" placeholder="구분">
+                                </div>
+                            </div>
+                            <div>
+                                <div class="b-item w100p">
+                                    <label for="">일자</label>
+                                    <input type="text" class="date-nomal w300 " placeholder="날짜선택" id="dp1663239751224">
+                                </div>
+                                <div class="b-item b-item-06 b-item-07">
+                                    <label for="">기관명</label>
+                                    <input type="text" class="input-nomal w300" placeholder="발급ㆍ수여 기관명">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="btn-wrap">
+                            <button class="add-btn">성과물 추가</button>
+                        </div>
+                    </div>
+                    <div class="container wrap-07">
+                        <p class="container__title">자기소개</p> 
+                        <div class="box-style">
+                            <p>ㆍ귀하의 관심분야, 참여희망 분v야, 학력, 경력, 활동사항, 성과물 등을 토대로 정책결정과정에서 능력을 발휘할 수 있는 주제가 무엇인지 구체적으로 서술하여 주시기 바랍니다.<br>ㆍ자기소개서, 포트폴리오 등 추가 자료가 있을 경우 함께 첨부해 주세요.</p>
+                        </div>
+                        <textarea cols="30" rows="7" class="textarea-nomal w100p  mb20" placeholder="내용을 작성해주세요"></textarea>
+                        <div class="file-upload">
+                            <input type="file" id="fileUp">
+                            <label for="fileUp" class="mr20">파일첨부</label>
+                            <div>
+                                <div class="input-nomal w100p">
+                                    <!-- 파일이 선택되었을 때 file-not-sel 대신 file-sel 클래스명이 들어가야 합니다.  -->
+                                    <div class="file-sel">
+                                        <p>첨부된 파일이 없습니다.</p>
+                                        <div>
+                                            <div></div>
+                                            <p>dddd</p>
+                                            <button></button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
                 </form>
             
         </div>
@@ -450,8 +563,11 @@
             
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/js/main.js"></script>
 </body>
 </html>
+
+
