--- a/html/3-1_인재정보등록-신청.html
+++ b/html/3-1_인재정보등록-신청.html
@@ -457,15 +457,21 @@
                             <input type="file" id="fileUp">
                             <label for="fileUp" class="mr20">파일첨부</label>
                             <div>
-                                <div class="input-nomal w100p">
-                                    <!-- 파일이 선택되었을 때 file-not-sel 대신 file-sel 클래스명이 들어가야 합니다.  -->
-                                    <div class="file-sel">
-                                        <p>첨부된 파일이 없습니다.</p>
-                                        <div>
-                                            <div></div>
-                                            <p>dddd</p>
-                                            <button></button>
-                                        </div>
+                                  <!-- 파일이 선택되었을 때 file-not-sel 대신 file-sel 클래스명이 들어가야 합니다.  -->
+                                  <div class="file-not-sel input-nomal w100p">
+                                    <p>첨부된 파일이 없습니다.</p>
+                                    <div>
+                                        <div></div>
+                                        <p>경로</p>
+                                        <button></button>
+                                    </div>
+                                </div>
+                                <div class="file-sel input-nomal w100p">
+                                    <p>첨부된 파일이 없습니다.</p>
+                                    <div>
+                                        <div></div>
+                                        <p>경로</p>
+                                        <button></button>
                                     </div>
                                 </div>
                             </div>
